--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
             console.log(response.data.msg)
             // let resp = response.data.msg.replace("\n\n", "<br/>")
             // res.innerHTML = resp;
-            res.innerHTML = marked(response.data.msg);
+            // res.innerHTML = marked(response.data.msg);
 
             // document.getElementById("md-view").innerHTML = marked(content)
         })
